fix: use stream collector instead of toList() directly